envoy_grpc.yaml

static_resources:
    listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8081
      filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
            codec_type: auto
            stat_prefix: ingress_http
            access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
                path: "/dev/stdout"
            route_config:
              name: local_route
              virtual_hosts:
              - name: backend
                domains:
                - "*"
                routes:
                - match:
                    prefix: "/"
                    grpc: {}
                  route:
                    cluster: backend_grpc_service
            http_filters:
            - name: envoy.filters.http.router
              typed_config: {}
    clusters:
    - name: backend_grpc_service
      connect_timeout: 0.250s
      type: strict_dns
      lb_policy: round_robin
      http2_protocol_options: {}
      load_assignment:
        cluster_name: backend_grpc_service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address:  10.12.23.127
                  port_value: 8000
  
#   admin:
#     access_log_path: "/tmp/admin_access.log"
#     address:
#       socket_address:
#         address: 0.0.0.0
#         port_value: 8881
